# learn-rust-webapp

./: Cargo.toml  README.md
src/: main.rs
static/: 404.html  min.css  welcome.html
templates/: 404.html  base.html  student.html  students.html  teacher.html  welcome.html
