[package]
name = "learn-rust-webapp"
version = "0.1.0"
authors = ["Fabio Gavilondo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-files = "0.3.0"
actix-http = "2.0.0"
serde = "1.0.116"
serde_json = "1.0.57"
env_logger = "0.7.1"
chrono = "0.4.15"
askama = "0.10.3"
rustls = "0.18.1"

[build-dependencies]
askama = "0.10.3"

