[package]
name = "learn-rust-webapp"
version = "0.1.0"
authors = ["Fabio Gavilondo"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-files = "0.3.0"
actix-http = "2.0.0"
serde = "1.0.116"
serde_json = "1.0.57"
env_logger = "0.7.1"
chrono = "0.4.15"
rustls = "0.18.1"
askama = "0.10.3"

[build-dependencies]
askama = "0.10.3"

